Stylus support with Skeleton

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,10 +1,15 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="container">
+    <div class="row">
+      <div class="one column" >One</div>
+      <div class="eleven columns" >
+        <a class="button" href="#">Anchor button</a>
+      </div>
+    </div>
+</div>  
   <h1>
     Stocks {{ title }}!
   </h1>
   <img width="300" alt="Angular Logo" src="assets/stocks.png">
-</div>
 <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
