--- a/ui/src/styles.styl
+++ b/ui/src/styles.styl
@@ -20,7 +20,8 @@ body
   line-height: 1.6
   font-weight: 400
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
-  color: grey-mid
+  color: white
+  background-color: #222
 
 
 /* Grid
