Auto stash before merge of "TestBranch" and "origin/development"

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -8,21 +8,8 @@
         <a class="button" href="#">Anchor button</a>
       </div>
     </div>
+    <app-header></app-header>
+    <app-content></app-content>
 </div>  
-  <h1>
-    Stocks {{ title }}! <i class="fa fa-truck" aria-hidden="true"></i>
-  </h1>
-  <img width="300" alt="Angular Logo" src="assets/stocks.png">
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h6 class="inline"><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h6>
-  </li>
-  <li>
-    <h6 class="inline"><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h6>
-  </li>
-  <li>
-    <h6 class="inline"><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h6>
-  </li>
-</ul>
+
 
