Componentes para el framework

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="row">
-      <div class="one column" >One</div>
-      <div class="eleven columns" >
+      <div class="three columns" >
+        <icon-button [iconClass]="'fa fa-cubes'" [texto]="'Stocks'">  </icon-button>  
+        <icon-button [iconClass]="'fa fa-cog'" [texto]="'Configuracion'">  </icon-button>  
+      </div>
+      <div class="nine columns" >
         <a class="button" href="#">Anchor button</a>
       </div>
     </div>
