--- a/ui/src/styles.styl
+++ b/ui/src/styles.styl
@@ -2,8 +2,8 @@
 @import "styles/variables"
 @import "styles/atomic"
 @import "styles/grid"
+@import "styles/buttons"
 
-// $fa-font-path: "../node_modules/font-awesome/fonts";
 @import "../node_modules/font-awesome/css/font-awesome.css";
 /*
 * Skeleton V2.0.4
@@ -66,65 +66,6 @@ a:hover
   color: #0FA0CE
 
 
-/* Buttons
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.button,
-button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"]
-  display: inline-block
-  height: 38px
-  padding: 0 30px
-  color: #555
-  text-align: center
-  font-size: 11px
-  font-weight: 600
-  line-height: 38px
-  letter-spacing: .1rem
-  text-transform: uppercase
-  text-decoration: none
-  white-space: nowrap
-  background-color: transparent
-  border-radius: 4px
-  border: 1px solid #bbb
-  cursor: pointer
-  box-sizing: border-box
-
-.button:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0; }
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: #FFF;
-  background-color: primary-color;
-  border-color: #1EAEDB; }
 
 
 /* Forms
@@ -222,21 +163,6 @@ pre > code {
   display: block;
   padding: 1rem 1.5rem;
   white-space: pre; }
-
-
-/* Tables
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-th,
-td {
-  padding: 12px 15px;
-  text-align: left;
-  border-bottom: 1px solid grey-lighter; }
-th:first-child,
-td:first-child {
-  padding-left: 0; }
-th:last-child,
-td:last-child {
-  padding-right: 0; }
 
 
 /* Spacing
