Fremawork icon button changed to accept button classes. anchor tag under the hood

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
       <div class="three columns" >
-        <icon-button [iconClass]="'fa fa-cubes'" [texto]="'Stocks'">  </icon-button>  
-        <icon-button [iconClass]="'fa fa-cog'" [texto]="'Configuracion'">  </icon-button>  
+        <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cubes'">Stocks</icon-button>  
+        <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cog'" >Configuracion</icon-button>  
       </div>
       <div class="nine columns" >
         <a class="button" href="#">Anchor button</a>
