--- a/ui/src/app/components/framework/icon-button/icon-button.component.html
+++ b/ui/src/app/components/framework/icon-button/icon-button.component.html
@@ -1,4 +1,5 @@
-<div>
-  <i [ngClass]="iconClass" aria-hidden="true"></i> {{texto}}
-</div>
+<a class="button" [ngClass]="buttonClass" href="#">
+  <i [ngClass]="iconClass" aria-hidden="true"></i> <ng-content></ng-content>
+  
+</a>
   
