--- a/ui/src/app/components/framework/icon-button/icon-button.component.styl
+++ b/ui/src/app/components/framework/icon-button/icon-button.component.styl
@@ -1,6 +1,5 @@
-:host
-  cursor: pointer
-  display: inline-block
+// :host
+//   display: inline-block
 div
   padding: .6em 1em
   border: 1px solid #aaa 
