--- a/ui/src/app/components/framework/icon-button/icon-button.component.html
+++ b/ui/src/app/components/framework/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<a class="button" [ngClass]="buttonClass" href="#">
+<a class="button" [ngClass]="buttonClass" >
   <i [ngClass]="iconClass" aria-hidden="true"></i> <ng-content></ng-content>
   
 </a>
