--- a/ui/src/styles/atomic.styl
+++ b/ui/src/styles/atomic.styl
@@ -1,2 +1,14 @@
+
 .inline
   display: inline
+
+
+
+.margin-vertical-l
+  margin-vertical(2em)
+
+.margin-vertical-m
+  margin-vertical(1em)
+
+.margin-vertical-s
+  margin-vertical(.5em)
