--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,15 +1,29 @@
+<header>
+    <div class="container">
+        <div class="row">
+          <div class="twelve columns" >
+              <div class="margin-vertical-m">
+                <icon-button routerLink="/" [buttonClass]="'button-primary'" [iconClass]="'fa fa-home'">Home</icon-button>  
+                <icon-button routerLink="/articulos" [buttonClass]="'button-primary'" [iconClass]="'fa fa-cubes'">Stocks</icon-button>  
+                <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cog'" >Configuracion</icon-button>  
+              </div>
+          </div>
+          
+        </div>
+
+    </div>  
+</header>
+
 <div class="container">
     <div class="row">
-      <div class="three columns" >
-        <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cubes'">Stocks</icon-button>  
-        <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cog'" >Configuracion</icon-button>  
-      </div>
-      <div class="nine columns" >
-        <a class="button" href="#">Anchor button</a>
+      <div class="twelve columns" >
+
+        <router-outlet></router-outlet>
+      
       </div>
     </div>
-</div>  
-  <h1>
-    Stocks {{ title }}! <i class="fa fa-truck" aria-hidden="true"></i>
-  </h1>
-  <router-outlet></router-outlet>
+</div>
+
+<footer>
+
+</footer>
