--- a/ui/src/styles.styl
+++ b/ui/src/styles.styl
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "styles/variables"
+@import "styles/mixins"
 @import "styles/atomic"
 @import "styles/grid"
 @import "styles/buttons"
@@ -185,8 +186,8 @@ form {
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
-  margin-top: 3rem;
-  margin-bottom: 3.5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
   border-width: 0;
   border-top: 1px solid grey-lighter; }
 
