agregar configuracion component

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -5,7 +5,7 @@
               <div class="margin-vertical-m">
                 <icon-button routerLink="/" [buttonClass]="'button-primary'" [iconClass]="'fa fa-home'">Home</icon-button>  
                 <icon-button routerLink="/articulos" [buttonClass]="'button-primary'" [iconClass]="'fa fa-cubes'">Stocks</icon-button>  
-                <icon-button [buttonClass]="'button-primary'" [iconClass]="'fa fa-cog'" >Configuracion</icon-button>  
+                <icon-button routerLink="/configuracion" [buttonClass]="'button-primary'" [iconClass]="'fa fa-cog'" >Configuracion</icon-button>  
               </div>
           </div>
           
