Feature Frameweork  Module

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -24,6 +24,13 @@
     </div>
 </div>
 
+
 <footer>
-    <app-message></app-message>
+    <div class="container">
+        <div class="row">
+            <div class="twelve columns" >
+                <app-message></app-message>
+            </div>
+        </div>
+    </div>
 </footer>
