--- a/ui/src/app/app.component.styl
+++ b/ui/src/app/app.component.styl
@@ -1,3 +1,26 @@
+@import "../styles/variables"
+
+.side_nav
+  border-right: 1px solid white
+  width: 20%
+  float: left
+  box-sizing: border-box
+
+  .logo
+    // padding: 1em
+    border: 1px solid #ffffff;
+    border-radius: 2px;
+  
+  .nav-buttons div
+    border-bottom: 1px solid #444
+    height: 3em
+
+
+.content
+  width: 80%
+  float: left
+  box-sizing: border-box
+
 footer 
   width: 100%
   bottom: 0
