--- a/ui/src/styles/atomic.styl
+++ b/ui/src/styles/atomic.styl
@@ -2,7 +2,8 @@
 .inline *
   display: inline
 
-
+.text-center
+  text-align: center
 
 .margin-vertical-l
   margin-vertical(2em)
@@ -12,3 +13,4 @@
 
 .margin-vertical-s
   margin-vertical(.5em)
+
