--- a/ui/src/styles/buttons.styl
+++ b/ui/src/styles/buttons.styl
@@ -43,8 +43,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary
   color: #FFF
-  background-color: #33C3F0
-  border-color: #33C3F0
+  background-color: primary-color
+  border-color: primary-color
 
 .button.button-primary:hover,
 button.button-primary:hover,
@@ -58,4 +58,4 @@ input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus
   color: #FFF
   background-color: primary-color
-  border-color: #1EAEDB
+  border-color: primary-color
