--- a/ui/src/styles/variables.styl
+++ b/ui/src/styles/variables.styl
@@ -2,8 +2,16 @@
 * Paleta principal
 */
 
-primary-color = #1EAEDB
+// primary-color = #1EAEDB
+// primary-color = #E2AF1D
+primary-color = #2E8684
 
+secondary-color = #2E8684
+secondary-light-color = #32a777
+
+accent-color = #C70E44
+alt-color = #7D7877
+alt2-color = #EE6B24
 
 
 /*
