--- a/ui/src/app/app.component.styl
+++ b/ui/src/app/app.component.styl
@@ -1,4 +1,4 @@
-@import "../styles/variables"
+@import "~styles/variables"
 
 .side_nav
   border-right: 1px solid white
@@ -20,9 +20,3 @@
   width: 80%
   float: left
   box-sizing: border-box
-
-footer 
-  width: 100%
-  bottom: 0
-  position: fixed
-  margin: 1em 1em
