--- a/ui/src/app/modules/framework/icon-button/icon-button.component.styl
+++ b/ui/src/app/modules/framework/icon-button/icon-button.component.styl
@@ -1,7 +1,8 @@
+@import "~styles/variables"
+
 :host
   outline: none
-div
-  padding: .6em 1em
-  border: 1px solid #aaa 
+  :hover
+    color: colors.primary
   i
     padding: 0 .5em
