--- a/ui/src/app/modules/framework/messages/message.component.html
+++ b/ui/src/app/modules/framework/messages/message.component.html
@@ -10,10 +10,11 @@
           </div>
       </div>
       <div class="row">
-          <div class="messages">
-
-            <div *ngFor='let message of messageService.messages'> {{message}} </div>
-          </div>
+            <div class="twelve columns">
+                <div class="messages">
+                    <div *ngFor='let message of messageService.messages'> {{message}} </div>
+                </div>
+            </div>
       </div>
   
 </div>
