--- a/ui/src/styles/atomic.styl
+++ b/ui/src/styles/atomic.styl
@@ -1,3 +1,6 @@
+/*
+  margin-vertical(val) Imported from mixin.styl
+*/
 
 .inline *
   display: inline
@@ -13,4 +16,16 @@
 
 .margin-vertical-s
   margin-vertical(.5em)
+
+
+
+.bottom-fixed 
+  width: 80% // Hack needed. Should be the same % as the outter content
+  bottom: 0
+  position: fixed
+
+/*
+ Text & Background COLORS
+*/
+
 
