--- a/ui/src/styles/buttons.styl
+++ b/ui/src/styles/buttons.styl
@@ -1,4 +1,25 @@
-/* Buttons
+.icon-button
+  display: inline-block
+  height: 38px
+  padding: 0 30px
+  color:  greys.mid
+  text-align: center
+  font-size: 1em
+  font-weight: 600
+  line-height: 38px
+  letter-spacing: .1rem
+  text-transform: uppercase
+  text-decoration: none
+  white-space: nowrap
+  background-color: transparent
+  border-radius: 4px
+  // border: 1px solid greys.light
+  cursor: pointer
+  box-sizing: border-box
+
+
+
+/* Skeleton Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .button,
 button,
@@ -43,8 +64,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary
   color: #FFF
-  background-color: primary-color
-  border-color: primary-color
+  background-color: colors.primary
+  border-color: colors.primary
 
 .button.button-primary:hover,
 button.button-primary:hover,
@@ -57,5 +78,5 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus
   color: #FFF
-  background-color: primary-color
-  border-color: primary-color
+  background-color: colors.primary
+  border-color: colors.primary
