--- a/ui/src/app/modules/framework/icon-button/icon-button.component.html
+++ b/ui/src/app/modules/framework/icon-button/icon-button.component.html
@@ -1,5 +1,5 @@
-<a class="button" [ngClass]="buttonClass" >
+<div class="icon-button" [ngClass]="buttonClass" >
   <i [ngClass]="iconClass" aria-hidden="true"></i> <ng-content></ng-content>
   
-</a>
+</div>
   
