--- a/ui/src/styles.styl
+++ b/ui/src/styles.styl
@@ -62,7 +62,7 @@ p
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a
-  color: primary-color
+  color: colors.primary
 a:hover
   color: #0FA0CE
   cursor: pointer
