--- a/ui/src/styles/variables.styl
+++ b/ui/src/styles/variables.styl
@@ -2,24 +2,26 @@
 * Paleta principal
 */
 
-// primary-color = #1EAEDB
-// primary-color = #E2AF1D
-primary-color = #2E8684
-
-secondary-color = #2E8684
-secondary-light-color = #32a777
-
-accent-color = #C70E44
-alt-color = #7D7877
-alt2-color = #EE6B24
+colors = {
+  primary : #E2AF1D ,
+  accent1 : #2E8684 ,
+  accent2 : #C70E44 ,
+  success : #00D93D ,
+  warning : #FFCB19 ,
+  alert : #D90000 ,
+  alt1 : #7D7877 ,
+  alt2 : #EE6B24 ,
+  alt3 : #32a777
+}
 
 
 /*
 * Greys
 */
+greys = {
+  lighter : #E1E1E1,
+  light : #ccc,
+  mid : #777,
+  dark : #333
+}
 
-
-grey-lighter = #E1E1E1
-grey-light = #ccc
-grey-mid = #777
-grey-dark = #333
