--- a/ui/src/styles/buttons.styl
+++ b/ui/src/styles/buttons.styl
@@ -1,18 +1,18 @@
 .icon-button
   display: inline-block
-  height: 38px
+  height: 4rem
   padding: 0 30px
   color:  greys.mid
   text-align: center
   font-size: 1em
   font-weight: 600
-  line-height: 38px
+  line-height: 4rem
   letter-spacing: .1rem
   text-transform: uppercase
   text-decoration: none
   white-space: nowrap
   background-color: transparent
-  border-radius: 4px
+  // border-radius: 4px
   // border: 1px solid greys.light
   cursor: pointer
   box-sizing: border-box
