--- a/ui/src/styles.styl
+++ b/ui/src/styles.styl
@@ -19,9 +19,11 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 html
+  height: 100%
   font-size: 62.5%
 
 body
+  height: 100%
   font-size: 1.5em/* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6
   font-weight: 400
