--- a/ui/src/app/modules/framework/icon-button/icon-button.component.html
+++ b/ui/src/app/modules/framework/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<div class="icon-button" [ngClass]="buttonClass" >
+<div class="icon-button"  >
   <i [ngClass]="iconClass" aria-hidden="true"></i> <ng-content></ng-content>
   
 </div>
