--- a/ui/src/styles/buttons.styl
+++ b/ui/src/styles/buttons.styl
@@ -1,8 +1,5 @@
 .icon-button
-  display: inline-block
-  height: 4rem
-  padding: 0 30px
-  color:  greys.mid
+  display: block
   text-align: center
   font-size: 1em
   font-weight: 600
@@ -12,8 +9,6 @@
   text-decoration: none
   white-space: nowrap
   background-color: transparent
-  // border-radius: 4px
-  // border: 1px solid greys.light
   cursor: pointer
   box-sizing: border-box
 
