--- a/ui/src/app/app.component.styl
+++ b/ui/src/app/app.component.styl
@@ -23,9 +23,11 @@
   // flex-basis: 20%// width: 80%
 
   .logo
-    // padding: 1em
-    border: 1px solid #ffffff;
-    border-radius: 2px;
+    margin: 2em;
+    border-bottom: 1px solid greys.mid;
+    color: #C70E44;
+    font-weight: bold;
+    font-size: 2.5rem;
   
   .nav-buttons div
     border-bottom: 1px solid #444
