--- a/ui/src/styles/atomic.styl
+++ b/ui/src/styles/atomic.styl
@@ -25,6 +25,18 @@
 
 /*
  Text & Background COLORS
+   Yields txt color and backgorund color classes
+   .primary-color{
+     color: #E2AF1D 
+   }
+   .primary-bg{
+     background-color: #E2AF1D
+   }
+
 */
 
-
+for key, value in colors
+  .{key}-color
+    color: value !important
+  .{key}-bg
+    background-color: value !important
