--- a/ui/src/app/app.component.styl
+++ b/ui/src/app/app.component.styl
@@ -19,7 +19,7 @@
 
 .side_nav
   flex: 1
-  border: 1px solid white
+  background-color: greys.dark
   // flex-basis: 20%// width: 80%
 
   .logo
@@ -36,7 +36,6 @@
 
 .main_content
   flex: 4
-  border: 1px solid white
   // flex-basis: 80%// width: 80%
   // float: left
   // display: inline-block
