Renamed Articulo -> Stock

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -13,7 +13,7 @@
                             [iconClass]="'fa fa-home'">Home
                         </icon-button>  
                         <icon-button 
-                            routerLink="/articulos" 
+                            routerLink="/stocks" 
                             [routerLinkActive]="['primary-color']" 
                             [iconClass]="'fa fa-cubes'">
                             Stocks
