--- a/ui/src/app/app.component.styl
+++ b/ui/src/app/app.component.styl
@@ -25,7 +25,7 @@
   .logo
     margin: 2em;
     border-bottom: 1px solid greys.mid;
-    color: #C70E44;
+    color: colors.accent1;
     font-weight: bold;
     font-size: 2.5rem;
   
@@ -36,6 +36,7 @@
 
 .main_content
   flex: 4
+  background-color: greys.lighter
   // flex-basis: 80%// width: 80%
   // float: left
   // display: inline-block
