--- a/ui/src/styles/atomic.styl
+++ b/ui/src/styles/atomic.styl
@@ -24,17 +24,17 @@
   position: fixed
 
 /*
- Text & Background COLORS
-   Yields txt color and backgorund color classes
-   .primary-color{
-     color: #E2AF1D 
-   }
-   .primary-bg{
-     background-color: #E2AF1D
-   }
-
+*  COLORS
+*  Text & Background. Autocreated from 'colors' and 'greys' Hashes
+*  
+*  Yields txt color and backgorund color classes
+*   .primary-color{
+*     color: #E2AF1D 
+*   }
+*   .primary-bg{
+*     background-color: #E2AF1D
+*   }
 */
-
 for key, value in colors
   .{key}-color
     color: value !important
