--- a/ui/src/styles/variables.styl
+++ b/ui/src/styles/variables.styl
@@ -4,14 +4,18 @@
 
 colors = {
   primary : #E2AF1D ,
-  accent1 : #2E8684 ,
+  accent1 : #0086b3,
   accent2 : #C70E44 ,
   success : #00D93D ,
   warning : #FFCB19 ,
-  alert : #D90000 ,
-  alt1 : #7D7877 ,
-  alt2 : #EE6B24 ,
-  alt3 : #32a777
+    alert : #D90000 ,
+     alt1 : #7D7877 ,
+     alt2 : #EE6B24 ,
+     alt3 : #32a777,
+     alt4 : #2E8684,
+  badass1 : #BADA55,
+  badass2 : #55BADA,
+  badass3 : #DA55BA
 }
 
 
@@ -19,10 +23,11 @@ colors = {
 * Greys
 */
 greys = {
-  lighter : #E1E1E1,
-  light : #ccc,
-  mid : #777,
-  dark : #3e3e3e,
-  darker : #222
+
+  lighter : #efefef,
+    light : #ccc,
+      mid : #777,
+     dark : #3e3e3e,
+   darker : #222
 }
 
