--- a/ui/src/app/components/stocks/stocks.component.html
+++ b/ui/src/app/components/stocks/stocks.component.html
@@ -1,5 +1,13 @@
-<h2 class="badass2-color">
-    Stocks
-</h2>
+<div>
 
-<hr>
+    <h2 class="badass2-color">
+        Stocks
+    </h2>
+    
+    
+    <hr>
+
+    <ul>
+        <li *ngFor="let stock of results">{{stock.id}} - {{stock.nombre}}</li>
+    </ul>
+</div>
