Broken down into more managable modules for lazy loading

--- a/ui/src/app/stocks/stocks.component.html
+++ b/ui/src/app/stocks/stocks.component.html
@@ -8,6 +8,6 @@
     <hr>
 
     <ul>
-        <li *ngFor="let stock of stocks">{{stock.id}} - {{stock.nombre}}</li>
+        <li *ngFor="let stock of stocks | async ">{{stock?.id}} - {{stock?.nombre}}</li>
     </ul>
 </div>
