--- a/ui/src/app/framework/icon-button/icon-button.component.html
+++ b/ui/src/app/framework/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<div class="icon-button"  >
+<div class=""  >
   <i [ngClass]="iconClass" aria-hidden="true"></i> <ng-content></ng-content>
   
 </div>
