--- a/ui/src/app/framework/icon-button/icon-button.component.styl
+++ b/ui/src/app/framework/icon-button/icon-button.component.styl
@@ -3,8 +3,32 @@
 :host
   outline: none
   color:  greys.mid
+  display: block
+  // text-align: center
+  font-size: 1em
+  font-weight: 600
+  line-height: 4rem
+  letter-spacing: .1rem
+  text-transform: uppercase
+  text-decoration: none
+  white-space: nowrap
+  background-color: transparent
+  cursor: pointer
+  box-sizing: border-box
+  padding-left: 3px
   :hover
     color: colors.primary
+  &.active
+    border-left: 3px solid 
+    padding-left: 0
+
+  div
+    padding-left: 2em
+
   i
-    padding: 0 .2em
     font-size: 2.5rem
+
+// icon-button
+  
+
+
